--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.3",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "angular2-flash-messages": "^3.0.1",
+    "angularfire2": "^5.4.2",
+    "json-server": "^0.16.3",
     "mdbootstrap": "^4.19.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
