--- a/angular.json
+++ b/angular.json
@@ -20,15 +20,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/styles.css",
-              "node_modules/mdbootstrap/css/bootstrap.min.css"
-            ],
-            "scripts": [
-              "node_modules/mdbootstrap/js/jquery.min.js",
-              "node_modules/mdbootstrap/js/popper.js",
-              "node_modules/mdbootstrap/js/bootstrap.min.js"
-            ]
+            "styles": ["src/styles.css"],
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -111,6 +104,10 @@
               "devServerTarget": "sbsc-frontend:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
