--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/router": "~11.2.3",
     "angular2-flash-messages": "^3.0.1",
     "angularfire2": "^5.4.2",
-    "json-server": "^0.16.3",
-    "mdbootstrap": "^4.19.2",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -45,6 +45,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
